--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,60 +51,18 @@ dependencies {
 }
 
 // 打印task的输入和输出
-def printTaskInputsOutputs(String taskName) {
-    def realTask = project.tasks.findByName(taskName)
-
-    if (realTask) {
-        println 'find ' + taskName + ' task -----------------------'
-
-        realTask.doLast {
-            realTask.inputs.files.each { fileTemp ->
-                println 'input file:' + fileTemp.absolutePath
-            }
-
-            println '---------------------------------------------------'
-            realTask.outputs.files.each { fileTemp ->
-                println 'output file:' + fileTemp.absolutePath
-            }
+gradle.taskGraph.afterTask { task ->
+    try {
+        println("---- task name:" + task.name)
+        task.inputs.files.each { fileTemp ->
+            println 'input file:' + fileTemp.absolutePath
         }
-    }
-}
 
-project.afterEvaluate {
-    def tasks = ['preDebugBuild',
-                 'compileDebugAidl',
-                 'compileDebugRenderscript',
-                 'checkDebugManifest',
-                 'generateDebugBuildConfig',
-                 'prepareLintJar',
-                 'generateDebugResValues',
-                 'generateDebugResources',
-                 'mergeDebugResources',
-                 'createDebugCompatibleScreenManifests',
-                 'processDebugManifest',
-                 'splitsDiscoveryTaskDebug',
-                 'processDebugResources',
-                 'generateDebugSources',
-                 'javaPreCompileDebug',
-                 'compileDebugJavaWithJavac',
-                 'compileDebugNdk',
-                 'compileDebugSources',
-                 'mergeDebugShaders',
-                 'compileDebugShaders',
-                 'generateDebugAssets',
-                 'mergeDebugAssets',
-                 'transformClassesWithDexBuilderForDebug',
-                 'transformDexArchiveWithExternalLibsDexMergerForDebug',
-                 'transformDexArchiveWithDexMergerForDebug',
-                 'mergeDebugJniLibFolders',
-                 'transformNativeLibsWithMergeJniLibsForDebug',
-                 'processDebugJavaRes',
-                 'transformResourcesWithMergeJavaResForDebug',
-                 'validateSigningDebug',
-                 'packageDebug',
-                 'assembleDebug'
-    ]
-    for (String taskName : tasks) {
-        printTaskInputsOutputs(taskName)
+        println '---------------------------------------------------'
+        task.outputs.files.each { fileTemp ->
+            println 'output file:' + fileTemp.absolutePath
+        }
+    } catch (Exception e) {
+
     }
 }
